--- a/index.html
+++ b/index.html
@@ -553,6 +553,7 @@
             border-radius: 50px;
             padding: 0.75rem;
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            min-height: 60px;
         }
 
         .input-container:focus-within {
@@ -574,6 +575,9 @@
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             position: relative;
             overflow: hidden;
+            flex-shrink: 0;
+            touch-action: manipulation;
+            -webkit-tap-highlight-color: transparent;
         }
 
         .voice-button {
@@ -647,30 +651,203 @@
         @media (max-width: 768px) {
             .header {
                 padding: 1rem;
+                flex-wrap: wrap;
+                gap: 1rem;
+            }
+
+            .logo-section {
+                flex: 1;
+                min-width: 200px;
+            }
+
+            .avatar {
+                width: 50px;
+                height: 50px;
+                font-size: 1.5rem;
             }
 
             .title-section h1 {
-                font-size: 2rem;
+                font-size: 1.8rem;
+            }
+
+            .title-section p {
+                font-size: 0.9rem;
+            }
+
+            .theme-toggle {
+                padding: 0.6rem 1.2rem;
+                font-size: 1.1rem;
+                min-width: 50px;
             }
 
             .word-of-day, .chat-container {
                 margin: 1rem;
             }
 
+            .word-of-day {
+                padding: 1.5rem;
+            }
+
             .word-japanese {
-                font-size: 2.5rem;
+                font-size: 2.2rem;
+            }
+
+            .word-reading {
+                font-size: 1rem;
+            }
+
+            .word-meaning {
+                font-size: 1rem;
+            }
+
+            .example-japanese {
+                font-size: 1rem;
             }
 
             .message-content {
                 max-width: 85%;
             }
 
+            .message-bubble {
+                padding: 1rem 1.5rem;
+                border-radius: 20px;
+            }
+
+            .japanese-text {
+                font-size: 1.1rem;
+            }
+
+            .english-text {
+                font-size: 0.85rem;
+            }
+
             .messages-area {
                 padding: 1rem;
+                gap: 1rem;
             }
 
             .input-area {
                 padding: 1rem;
+            }
+
+            .input-container {
+                padding: 0.5rem;
+                gap: 0.75rem;
+            }
+
+            .voice-button, .send-button {
+                width: 44px;
+                height: 44px;
+                font-size: 1.3rem;
+                flex-shrink: 0;
+            }
+
+            .message-input {
+                font-size: 1rem;
+                padding: 0.6rem 0.8rem;
+            }
+
+            .fab {
+                bottom: 1rem;
+                right: 1rem;
+                width: 50px;
+                height: 50px;
+                font-size: 1.3rem;
+            }
+
+            /* Ensure buttons are touch-friendly */
+            .voice-button:hover, .send-button:hover {
+                transform: scale(1.05);
+            }
+
+            .speak-button {
+                width: 32px;
+                height: 32px;
+                bottom: -8px;
+                right: -8px;
+            }
+
+            /* Loading message mobile adjustments */
+            .loading-bubble {
+                padding: 1rem 1.5rem;
+                border-radius: 20px;
+            }
+
+            /* Welcome screen mobile */
+            .welcome-title {
+                font-size: 2.2rem;
+            }
+
+            .welcome-subtitle {
+                font-size: 1rem;
+                padding: 0 1rem;
+            }
+        }
+
+        /* Extra small mobile devices */
+        @media (max-width: 480px) {
+            .header {
+                padding: 0.75rem;
+            }
+
+            .title-section h1 {
+                font-size: 1.5rem;
+            }
+
+            .word-of-day, .chat-container {
+                margin: 0.75rem;
+            }
+
+            .word-japanese {
+                font-size: 1.8rem;
+            }
+
+            .message-content {
+                max-width: 90%;
+            }
+
+            .input-container {
+                gap: 0.5rem;
+                padding: 0.4rem;
+            }
+
+            .voice-button, .send-button {
+                width: 40px;
+                height: 40px;
+                font-size: 1.2rem;
+            }
+
+            .message-input {
+                font-size: 0.95rem;
+                padding: 0.5rem 0.7rem;
+            }
+        }
+
+        /* Landscape mobile orientation */
+        @media (max-width: 768px) and (orientation: landscape) {
+            .header {
+                padding: 0.5rem 1rem;
+            }
+
+            .word-of-day {
+                padding: 1rem;
+                margin: 0.5rem 1rem;
+            }
+
+            .word-japanese {
+                font-size: 2rem;
+            }
+
+            .chat-container {
+                margin: 0.5rem 1rem 1rem 1rem;
+            }
+
+            .welcome-title {
+                font-size: 2rem;
+            }
+
+            .welcome-logo {
+                font-size: 3rem;
             }
         }
 
@@ -858,7 +1035,7 @@
             <div class="logo-section">
                 <div class="avatar"></div>
                 <div class="title-section">
-                    <h1>Afny AI</h1>
+                    <h1>Sakura AI</h1>
                     <p>あなたの日本語学習パートナー</p>
                 </div>
             </div>
